--- a/Web/babel-polyfill/tutorial/package.json
+++ b/Web/babel-polyfill/tutorial/package.json
@@ -15,6 +15,8 @@
     "@babel/preset-env": "^7.10.4"
   },
   "dependencies": {
-    "core-js": "^3.6.5"
+    "core-js": "^3.6.5",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   }
 }
