--- a/Web/babel-polyfill/tutorial/package.json
+++ b/Web/babel-polyfill/tutorial/package.json
@@ -12,7 +12,8 @@
   "devDependencies": {
     "@babel/cli": "^7.10.4",
     "@babel/core": "^7.10.4",
-    "@babel/preset-env": "^7.10.4"
+    "@babel/preset-env": "^7.10.4",
+    "babel-loader": "^8.1.0"
   },
   "dependencies": {
     "core-js": "^3.6.5",
