--- a/Web/babel-polyfill/tutorial/package.json
+++ b/Web/babel-polyfill/tutorial/package.json
@@ -14,7 +14,8 @@
     "@babel/core": "^7.10.4",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
-    "babel-loader": "^8.1.0"
+    "babel-loader": "^8.1.0",
+    "html-webpack-plugin": "^4.3.0"
   },
   "dependencies": {
     "core-js": "^3.6.5",
